# aigl_test_bot

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/aigl_test_bot/: bot.py  config.toml
