[project]
name = "aigl_test_bot"
description = "Bot to test AIGL"
authors = [{ name = "Jan-Lukas Wynen" }]
version = "1.0"
license = "Unlicense"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "rich",
]

[dependency-groups]
dev = [
    "pydantic",
]

[build-system]
requires = [
    "setuptools>=77",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
--strict-config
--strict-markers
--import-mode=importlib
-ra
-v
"""
testpaths = "tests"
filterwarnings = [
    "error",
]

[tool.ruff]
line-length = 88
extend-exclude = [
    ".*", "__pycache__", "build", "dist",
]

[tool.ruff.lint]
select = ["B", "C4", "DTZ", "E", "F", "G", "I", "FBT003", "FURB", "PERF", "PGH", "PT", "PYI", "RUF", "S", "T20", "UP", "W"]
ignore = [
    "E741", "E742", "E743", # do not use names ‘l’, ‘O’, or ‘I’; they are not a problem with a proper font
    "UP038", # leads to slower code
    # Conflict with ruff format, see
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", "COM819", "D206", "D300", "E111", "E114", "E117", "ISC001", "ISC002", "Q000", "Q001", "Q002", "Q003", "W191",
]
fixable = ["B010", "I001", "PT001", "RUF022"]
isort.known-first-party = ["aigl_test_bot"]
pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # asserts are fine in tests
    "S324", # insecure hsh function; we don't use hashing for security
]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
show_error_codes = true
warn_unreachable = true
